# Codex_buddy_Cardputer_ADV

./: .gitignore  AI_DEPLOYMENT.md  LICENSE  README.md  README.zh-CN.md  requirements-dev.txt
.github/workflows/: release-artifacts.yml
apps/codex-buddy-menu/: Cargo.toml
apps/codex-buddy-menu/assets/: tray-icon-32.rgba
apps/codex-buddy-menu/src/: config.rs  launch_agent.rs  lib.rs  main.rs  network.rs
daemon/: pyproject.toml
daemon/src/codex_buddy/: __init__.py  cli.py  codex_hook.py  codex_state.py  desktop_config.py  pet_assets.py  protocol.py  session_tailer.py  transport.py  wifi_bridge.py
daemon/tests/: test_cli.py  test_codex_state.py  test_desktop_config.py  test_hook_runner_tool.py  test_pet_assets.py  test_protocol.py  test_release_check.py  test_session_tailer.py  test_transport.py  test_wifi_bridge.py
docs/: desktop-integration.md  menu-bar-app.md  pets.md  protocol.md  quickstart.md  release-checklist.md
firmware/: platformio.ini
firmware/include/: AppSettings.h  BleTransport.h  CodexBuddyProtocol.h  CodexPetSprite.h  KeyMap.h  PetStats.h  SfxPlayer.h  StatusView.h  (+1 more)
tools/: ble_bridge_Info.plist  ble_smoke.swift  ble_smoke_Info.plist  build_ble_bridge_app.sh  build_ble_smoke_app.sh  build_daemon_binary.sh  build_menu_bar_app.sh  check_firmware_keymap.py  check_release_assets.py  check_usb_ports.py  codex_buddy_daemon_entry.py  codex_with_buddy_hook.py  generate_example_pet_package.py  generate_menu_bar_icons.py  generate_pet_sprite_asset.py  package_firmware_release.sh  package_menu_bar_app.sh  release_check.py  serial_smoke.py
(+19 files in other folders)
