[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-buddy-daemon"
version = "0.1.0"
description = "Local Codex Desktop to M5 Cardputer ADV buddy bridge"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
codex-buddy = "codex_buddy.cli:main"

